08- DB MODIFICA ATRIBUTOS USER AÑADIDOS
